src/modules/emote_menu/twitch/EmoteMenu.module.css
.legacyButton {
  background-size: 18px;
  background-position: center;
  background-repeat: no-repeat;
  cursor: pointer;
  height: 18px;
  width: 18px;
  filter: grayscale(100%);
  opacity: 0.9;
  float: left;
  padding: 15px;
  background-image: url(assets/icons/legacy_smile.svg) !important;
}

.button {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: var(--button-size-default, 30px);
  width: var(--button-size-default, 30px);
  cursor: pointer;
  border-radius: 100%;
  border-radius: var(--border-radius-rounded);
  border-bottom-right-radius: var(--border-radius-large);

  &:hover {
    background-color: var(--color-background-button-text-hover);
    color: var(--color-fill-button-icon-hover);
  }

  &:active {
    background-color: var(--color-background-button-text-active);
  }

  transition: 100ms ease-in-out;
}

.button::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--color-fill-button-icon);
  mask-image: url(assets/logos/logo.svg);
  mask-size: 18px 18px;
  mask-position: center;
  mask-repeat: no-repeat;
}

.container {
  display: inline-block !important;
  vertical-align: bottom !important;
}

.hideEmoteMenuButtonContainer button[data-a-target='emote-picker-button'] {
  display: none;
}

